2002-03-05  Michael Meeks  <michael@ximian.com>

	* src/file-manager/fm-directory-view.c
	(fm_directory_view_supports_zooming): check if
	zoomable is non NULL.
	(fm_directory_view_destroy): NULL the zoomable at
	the same time as the nautilus_view, since they're
	the same aggregate.

	* libnautilus-private/nautilus-icon-factory.c
	(get_image_cache_view): impl.
	(cache_icon_new): add the icon to the cache view.
	(cache_icon_unref): destroy the icon's view widget.

2002-03-04 John Fleck <jfleck@inkstain.net>

	* help/Makefile.am
	adding xmldocs.make to EXTRA_DIST

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c: (real_file_limit_reached):
	Fix a stray NautilusFile unref that could cause big trouble.

	* src/file-manager/fm-list-view.c: (event_after_callback): New,
	puts up a menu when you right-click.
	(create_and_set_up_tree_view): Attach new handler.
	(fm_list_view_reset_to_defaults): Make this compile.

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c:
	(real_get_selected_icon_locations): Put a default one in here, since
	there are only really icon locations for FMIconView.
	(fm_directory_view_class_init): Set up default get_selected_icon_locations.
	
	* src/file-manager/fm-list-model.c:
	(fm_list_model_get_sort_column_id_from_attribute): Allow NULL.
	(fm_list_model_get_sort_column_id_from_sort_type): Handle all types.

	* src/file-manager/fm-list-view.c:
	(set_sort_order_from_metadata_and_preferences): Fix to handle unknown
	values in metadata.
	(fm_list_view_reset_to_defaults): New.
	(fm_list_view_class_init): Hoom up the new reset_to_defaults function.

2002-03-04  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c: Formatting tweaks.

	* src/file-manager/fm-list-model.c: (remove_link_saving_prev):
	Fix bug where it would skip every other node.

	* src/file-manager/fm-list-view.c: (fm_list_view_select_all): New.