@@ -1,3 +1,9 @@
+2002-03-05  Anders Carlsson  <andersca@gnu.org>
+
+	* libnautilus-private/nautilus-global-preferences.c 
+	(nautilus_global_preferences_init_with_folder_browsing):
+	Register default folder viewer enumeration too.
+
 2002-03-05  Michael Meeks  <michael@ximian.com>
 
 	* src/file-manager/fm-directory-view.c
